# programming-language

./: .gitignore  .pylintrc  CMakeLists.txt  Makefile  README.md  example.txt  grammar.txt  map.c  map.h  notes.txt  object.h  parser.c  parser.h  run.sh  runvalgrind.sh  symbol_table.h  symboltable.h  trie.h
compiler/: Makefile  assembler.py  assemblyparser.py  assemblyvisitor.py  combinators.py  example.txt  lexer.py  main.py  parse.py  parser.py
compiler-c/: Makefile
compiler-c/include/: lexer.h  list.h  log.h  parser.h
compiler-c/source/: lexer.c  list.c  parser.c
compiler-c/test/: example.txt  main.c  test.h  testmain.c
compiler/include/: lexer.h  log.h
compiler/source/: main.c
compiler/test/: example.txt  test.h
include/: interpreter.h  lexer.h  list.h  object.h  parser.h  symboltable.h
interpreter/: Makefile
interpreter/include/: interpreter.h
interpreter/source/: interpreter.c  interpreter.h  (+1 more)
notes/: c2.txt  compiler.txt  grammar.txt  interpreter.txt  memory.txt  object files.txt  objectfiles.txt  parser.txt  scratch.txt  scratch3.txt  syntax.txt  syntax2.txt  syntax3.txt  syntax4.txt  todo.txt
source/: arena.c  arena.h  combinators.py  example.txt  hashmap.h  interpreter.c  lex.py  lexer.c  lexer.h  list.c  list.h  main.c  main.py  map.c  map.h  node.c  node.h  object.c  object.h  parse.py  parser.c  parser.h  symbol.h  symbol_table.h  symboltable.c  symboltable.h  token.c  token.h  trie.c  trie.h  visitor.c  visitor.h
temp/: lexer.c  main.c  node.c  node.h  object.c  object.h  parser.c  visitor.c  visitor.h
tests/: main.c  test.h
